switch flex-box to grid-box

--- a/frontend.scss
+++ b/frontend.scss
@@ -7,8 +7,8 @@
 @import "base/base";
 //I don't want somehow add any dependent on this website
 //@import "base/fontAndIcon/fontawesome";
-//@import "base/layout-gridbox";
-@import "base/layout-flexbox";
+@import "base/layout-gridbox";
+//@import "base/layout-flexbox";
 @import "base/layout-respond";
 @import "base/typography";
 @import "base/utilities";
